# cli-dungeon

./: .env  Cargo.toml  README.md  build.rs  encounter.rhai  init-character  init-database  justfile
.github/workflows/: ci.yml  (+1 more)
.sqlx/: query-02f63098aa63ec0175de85ba8321bc54fdc3ec62ce3e8cdfd582d85a7783f4f6.json  query-0304ef9dbeac92b6c6675f9922e55d7cad05842ed8ddbaf6d41e700e3a8480ab.json  query-0c3cc43050b7dcc6726ea8735c850ef65d4979d2714ef527c01c4f0f4ff6752c.json  query-0e1d0ed99627f6acd66c79afddae1950bcde23d3ac36005737b70573d6d2917f.json  query-0e848043bf981c941b2a41de2555c96eca51d6b7a195a6acf5860355680f55a0.json  query-124ddecb859c6d13960acf8590b35c1b7fb12890ffc68dc54d0ee019c5cc46d9.json  query-1398d8b5e8e653b9c25ce49448f980dc0dd00ef4480ee7727b138e1920a97d57.json  query-1d75cec0bb2730ae042bd9477b3d99eb7fd8825f3457abc94700111be3345622.json  query-1da4b10d9ecb3ace0b2c0c211535faeb8f94d4172d3d5fcec84617c31c8ccd0e.json  query-2d1485ba5ddde1b37c07f8a718458cef2d574368f0990c2173fb5d925e6d1f42.json  query-39e7c82033f2517accfeae001a60dc81bfdeef023902f253ebb27f16a8987d59.json  query-48b26d9c73ae033ea1399cbd65b1daf035663f11de116c30e64dc6c0dad7e2a6.json  query-495a705d81f39624140c6118fe9da35610d26b3c0626c60de05489595de7dadc.json  query-503c1c0f01f27affb1fa0db2d991371c023318cc6bd281c4d233f77bec6cf77c.json  query-563033966d6ed0c423b3842941241d0e13a525367f9188c6da2604a8040f9d68.json  query-5b32184dd9ff817de7bcd0ec66ae3b2f4e454b1ecc86ad164520a4203f6d62e1.json  query-5d93bf7a00f7dee2f9a7ce7289baa3656741672c3043fc67fbc93e3364107396.json  query-6349a1aec0bbed35838a4042821bf47414f4303fc0bb788cd3cad3c4c614f29f.json  query-6709a6df152f9328fbaa4007b7a01b277b15fb7b50dba62263e31023d4e430ee.json  query-707e454f181201e7877fa06f674883916264bafc95d975f79241e6ca25f3248c.json  query-76d118655bada21220f36a34927419abb16426a8a64a6995f982ab3257757a27.json  query-79d2777cc20b28bee6555230a064056a86a53f14c9e7ae42fe1fe8103a3649f7.json  query-7c914390ec95cdbf3ab3217cc2a935a5438cc6f5aae47015c5aa1213b7f426d4.json  query-7e3e47b30ccb82ed5f3882f5742392acbb0f14f551dfeb6fe034e5dcaedd4d36.json  query-80882a75bb4a1177a1add7ce74ed482072420da2d25f0519cf867d3f85f90739.json  query-80d697ff7a3e81ca227e72b46e105a093e940ece1dccd6acb6b66cdaf0b1b1fe.json  query-8a0569e915e76fc1b09459b8d4a4d7db93e0a7dac3ab49ae253ebf76d83eb479.json  query-90f923d5de2e4cfc76045ce5437ac96fad975458cf7057165db18aa3b43ba672.json  query-95afe70fd7023b35474949948e439a4a6e285cc20fcee952aa94b8911a9b0be2.json  query-98df64299756d6ac15930df4ee4f36ab5a194b3045ee6510b7107b33d50fc738.json  query-9b76a34cab24949d20b5f14496f3700187fb3c7dcf98edd238695b4c481fd135.json  query-9c206ad24a4009ac4409906f728b2ff5c8474610858a0fb95363a044f6eefd0d.json  query-9cb8c7dc17bb2216c5053f041c69567b22a98cf3e32efb68c5cc34e68f6d8fec.json  (+11 more)
cli-dungeon/: Cargo.toml
cli-dungeon-core/: Cargo.toml
cli-dungeon-core/src/: character.rs  errors.rs  lib.rs  shop.rs  turn.rs
cli-dungeon-database/: Cargo.toml
cli-dungeon-database/migrations/: 20250602172249_character.sql  20250623073256_initial.sql
cli-dungeon-database/src/: lib.rs
cli-dungeon-rules/: Cargo.toml
cli-dungeon/src/: encounter.rs  main.rs
(+13 files in other folders)
