[workspace]
resolver = "3"
members = ["cli-dungeon", "cli-dungeon-core", "cli-dungeon-database", "cli-dungeon-rules"]

[workspace.dependencies]
rand = "0.9"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sanitizer = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }

