[package]
name = "cli-dungeon-core"
version = "0.1.0"
edition = "2024"

[dependencies]
cli-dungeon-rules = { version = "*", path = "../cli-dungeon-rules" }
cli-dungeon-database = { version = "*", path = "../cli-dungeon-database" }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
rand = { workspace = true }
sanitizer = { workspace = true }
