[package]
name = "cli-dungeon-database"
version = "0.1.0"
edition = "2024"

[dependencies]
cli-dungeon-rules = { version = "*", path = "../cli-dungeon-rules" }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

