[package]
name = "cli-dungeon-database"
version = "0.1.0"
edition = "2024"

[dependencies]
cli-dungeon-rules = { version = "*", path = "../cli-dungeon-rules" }

dirs = "6"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
thiserror = { workspace = true }
futures = { workspace = true }
